k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - demo.local
      secretName: demo-tls
  rules:
    - host: demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 8080
  # ✅ IP fixe du cluster Minikube
  # (ça force NGINX à écouter sur 192.168.49.2)
  # Cette IP est celle du nœud Minikube
  # Vérifie avec : minikube ip
